--- a/WordFinderWPF/MainWindow.xaml
+++ b/WordFinderWPF/MainWindow.xaml
@@ -5,8 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WordFinderWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="744" Width="1118">
     <Grid>
+        <Grid Background="#FFD3434D" VerticalAlignment="Bottom" Height="100">
+            <Grid Width="750" Height="100">
+                <Slider x:Name="sliderSizeMatrix" HorizontalAlignment="Center" Margin="0,19,0,0" VerticalAlignment="Top" Width="700" Height="34" Maximum="64" Value="5" ValueChanged="sliderSizeMatrix_ValueChanged" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                <Label Content="Choose Matrix size" HorizontalAlignment="Center" Margin="0,42,0,0" VerticalAlignment="Top" Width="338" Height="50" FontSize="24" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Roboto" Foreground="White"/>
+                <Label Content="0" HorizontalAlignment="Left" Margin="25,45,0,0" VerticalAlignment="Top" Width="40" FontSize="24" FontFamily="Roboto" Foreground="White"/>
+                <Label Content="64" HorizontalAlignment="Right" Margin="0,53,25,0" VerticalAlignment="Top" Width="40" FontSize="24" FontFamily="Roboto" Foreground="White"/>
+            </Grid>
+        </Grid>
+        <Grid>
+            <Rectangle Height="88" VerticalAlignment="Top" Fill="#FFD3434D"/>
+            <Label Content="WORD FINDER" HorizontalAlignment="center" Margin="0,15,0,0" VerticalAlignment="Top" Width="249" Height="60" FontSize="36" Background="{x:Null}" Foreground="White" FontStretch="Normal" FontWeight="SemiBold" FontFamily="Roboto"/>
+            <Image HorizontalAlignment="Left" Height="59" Margin="92,10,0,0" VerticalAlignment="Top" Width="139" Source="/logo.png"/>
+        </Grid>
 
     </Grid>
 </Window>
